--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
- :root {
-    --preto-principal: #000000;
-    --azul-secundario: #0033E8;
-    
- }
+:root {
+    --cor-de-fundo: #EBECEE;
+}
+
+body {
+    background-color: var(--cor-de-fundo);
+}
